// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableNG utils buildInspectValue should handle NaN 1`] = `
[
  "NaN",
  "text",
]
`;

exports[`TableNG utils buildInspectValue should handle array 1`] = `
[
  "[
  "foo",
  "bar",
  "baz"
]",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle boolean 1`] = `
[
  "true",
  "text",
]
`;

exports[`TableNG utils buildInspectValue should handle geo 1`] = `
[
  "POINT(0 -0.0006656516255105771)",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle geo w/ invalid format 1`] = `
[
  "6y4h9b",
  "text",
]
`;

exports[`TableNG utils buildInspectValue should handle geo w/out formatGeometry 1`] = `
[
  "{
  "disposed": false,
  "pendingRemovals_": null,
  "dispatching_": null,
  "listeners_": null,
  "revision_": 1,
  "ol_uid": "1",
  "values_": null,
  "extent_": [
    null,
    null,
    null,
    null
  ],
  "extentRevision_": -1,
  "simplifiedGeometryMaxMinSquaredTolerance": 0,
  "simplifiedGeometryRevision": 0,
  "layout": "XY",
  "stride": 2,
  "flatCoordinates": [
    0,
    -74.1
  ]
}",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle null 1`] = `
[
  "",
  "text",
]
`;

exports[`TableNG utils buildInspectValue should handle null w/ JSON 1`] = `
[
  "null",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle numbers 1`] = `
[
  "0",
  "text",
]
`;

exports[`TableNG utils buildInspectValue should handle object 1`] = `
[
  "{
  "foo": true,
  "b": "baz"
}",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle sparkline (no x) 1`] = `
[
  "[
  2,
  4,
  6,
  8,
  10
]",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle sparkline 1`] = `
[
  "[
  [0, 10],
  [1000, 20],
  [2000, 30]
]",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle string 1`] = `
[
  "foo",
  "text",
]
`;

exports[`TableNG utils buildInspectValue should handle string w/ JSON (invalid JSON) 1`] = `
[
  ""{\\"invalid\\": \\"json"",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle string w/ JSON 1`] = `
[
  "{
  "valid": "json"
}",
  "code",
]
`;

exports[`TableNG utils buildInspectValue should handle undefined 1`] = `
[
  "",
  "text",
]
`;
